--- a/client/components/project-list/project-list.html
+++ b/client/components/project-list/project-list.html
@@ -1,7 +1,8 @@
 <div  ng-controller="ProjectListCtrl">
 
 <ul class="list-group">
-    <li ng-repeat="project in projects" class="list-group-item"><a href="/project/{{project._id}}">{{project.name}}</a></li>
+    <li ng-repeat="currentProject in currentProjects" class="list-group-item active"><a href="/project/{{currentProject._id}}">{{currentProject.name}}</a></li>
+    <li ng-repeat="ondeckProject in ondeckProjects" class="list-group-item ondeck"><a href="/project/{{ondeckProject._id}}">{{ondeckProject.name}}</a></li>
 </ul>
 <a class="btn btn-lg btn-primary" href="/newproject">Add Project</a>
 </div>
