--- a/client/app/app.css
+++ b/client/app/app.css
@@ -39,5 +39,8 @@
 }
 
 
+
+/*==================JZEOLI STYLES=====================*/
 .active a{font-weight: bold}
 .ondeck a{font-style: italic; color:#ccc;}
+.upcoming-date{float:right;}
