Bug fixes from last night

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -44,3 +44,6 @@
 .active a{font-weight: bold}
 .ondeck a{font-style: italic; color:#ccc;}
 .upcoming-date{float:right;}
+
+
+.complete{font-style: italic; text-decoration: line-through;}
